--- a/Client/src/gui/MainWindow.ui
+++ b/Client/src/gui/MainWindow.ui
@@ -118,8 +118,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>99</width>
-            <height>654</height>
+            <width>98</width>
+            <height>655</height>
            </rect>
           </property>
           <layout class="QHBoxLayout" name="localTracksLayout">
@@ -229,8 +229,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>711</width>
-                <height>674</height>
+                <width>712</width>
+                <height>675</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -321,7 +321,7 @@
      <x>0</x>
      <y>0</y>
      <width>1160</width>
-     <height>21</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuPreferences">
@@ -332,6 +332,8 @@
     <addaction name="actionMidiPreferences"/>
     <addaction name="actionVstPreferences"/>
     <addaction name="actionRecording"/>
+    <addaction name="separator"/>
+    <addaction name="actionQuit"/>
    </widget>
    <widget class="QMenu" name="menuNinjam">
     <property name="title">
@@ -370,20 +372,32 @@
    <property name="text">
     <string>Audio ...</string>
    </property>
+   <property name="shortcut">
+    <string>F1</string>
+   </property>
   </action>
   <action name="actionMidiPreferences">
    <property name="text">
     <string>Midi ...</string>
+   </property>
+   <property name="shortcut">
+    <string>F2</string>
    </property>
   </action>
   <action name="actionVstPreferences">
    <property name="text">
     <string>VST Plugins ...</string>
    </property>
+   <property name="shortcut">
+    <string>F3</string>
+   </property>
   </action>
   <action name="actionRecording">
    <property name="text">
     <string>Recording ...</string>
+   </property>
+   <property name="shortcut">
+    <string>F4</string>
    </property>
   </action>
   <action name="actionPrivate_Server">
@@ -430,6 +444,14 @@
    </property>
    <property name="text">
     <string>Mini View</string>
+   </property>
+  </action>
+  <action name="actionQuit">
+   <property name="text">
+    <string>Quit...</string>
+   </property>
+   <property name="shortcut">
+    <string>Q</string>
    </property>
   </action>
  </widget>
