--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -41,7 +41,8 @@
         <file>translate.png</file>
         <file>warning.png</file>
         <file>chat_small.png</file>
-        <file>presets.ico</file>
+        <file>preset-load.png</file>
+        <file>preset-save.png</file>
     </qresource>
     <qresource prefix="/flags">
         <file>flags/ad.png</file>
