splitting xmit for each channel #132

--- a/Client/src/gui/BaseTrackView.ui
+++ b/Client/src/gui/BaseTrackView.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>138</width>
+    <width>377</width>
     <height>403</height>
    </rect>
   </property>
@@ -337,6 +337,59 @@
            </property>
           </widget>
          </item>
+         <item row="1" column="0" colspan="2">
+          <widget class="QWidget" name="metersWidget" native="true">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>1</verstretch>
+            </sizepolicy>
+           </property>
+           <layout class="QHBoxLayout" name="horizontalLayout_2">
+            <property name="spacing">
+             <number>1</number>
+            </property>
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <item>
+             <widget class="PeakMeter" name="peakMeterLeft" native="true">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>1</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="accessibleDescription">
+               <string>This is the peak meter left </string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="PeakMeter" name="peakMeterRight" native="true">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>1</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="accessibleDescription">
+               <string>This is the peak meter right </string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+         </item>
          <item row="5" column="0" colspan="2">
           <widget class="QGroupBox" name="boostPanel">
            <property name="title">
@@ -407,63 +460,6 @@
              </widget>
             </item>
            </layout>
-          </widget>
-         </item>
-         <item row="1" column="0" colspan="2">
-          <widget class="QWidget" name="metersWidget" native="true">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-             <horstretch>0</horstretch>
-             <verstretch>1</verstretch>
-            </sizepolicy>
-           </property>
-           <layout class="QHBoxLayout" name="horizontalLayout_2">
-            <property name="spacing">
-             <number>1</number>
-            </property>
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
-            <property name="topMargin">
-             <number>0</number>
-            </property>
-            <property name="rightMargin">
-             <number>0</number>
-            </property>
-            <property name="bottomMargin">
-             <number>0</number>
-            </property>
-            <item>
-             <widget class="PeakMeter" name="peakMeterLeft" native="true">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                <horstretch>0</horstretch>
-                <verstretch>1</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="accessibleDescription">
-               <string>This is the peak meter left </string>
-              </property>
-              <zorder>peakMeterRight</zorder>
-             </widget>
-            </item>
-            <item>
-             <widget class="PeakMeter" name="peakMeterRight" native="true">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                <horstretch>0</horstretch>
-                <verstretch>1</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="accessibleDescription">
-               <string>This is the peak meter right </string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-           <zorder>peakMeterLeft</zorder>
-           <zorder>peakMeterLeft</zorder>
-           <zorder>peakMeterRight</zorder>
           </widget>
          </item>
         </layout>
