--- a/Client/src/resources/jamtaba.css
+++ b/Client/src/resources/jamtaba.css
@@ -748,6 +748,10 @@ JamRoomViewPanel  #labelRoomType{
 }
 
 
+QPushButton#xmitButton[preparing="true"]{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgb(255,255,0), stop:1 rgb(204,204,0));
+}
+
 #xmitButton:!checked{
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgba(255, 90, 62, 140), stop:1 rgba(175, 0, 0, 140));
     border-style: outset;
